/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds
 */
plugins{
    id 'java'
    id 'maven-publish'    
    id 'kr.entree.spigradle' version '2.2.4'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
    id 'io.freefair.lombok' version '6.1.0'
}

group = 'net.aleiv'
version = '0.1-SNAPSHOT'

compileJava{
    options.encoding = 'UTF-8'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }
}
javadoc {
    options.encoding = 'UTF-8'
}

repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
    maven { url 'https://papermc.io/repo/repository/maven-public/' }
    maven { url 'https://libraries.minecraft.net/' }
    maven { url 'https://plugins.gradle.org/m2' }
    maven { url 'https://jitpack.io' }
    maven { url 'https://repo.aikar.co/content/groups/aikar/' }
    // SonaType repo for redis dependency
    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
}


dependencies {
    //Paper
    compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
    
    // Use Protocol Lib
    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.7.0";
    // MiniMessage
    implementation 'net.kyori:adventure-text-minimessage:4.1.0-SNAPSHOT'
    // Lombok
	compileOnly 'org.projectlombok:lombok:1.18.12'
	annotationProcessor 'org.projectlombok:lombok:1.18.12'
	testCompileOnly 'org.projectlombok:lombok:1.18.12'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
    //ACF
    implementation 'co.aikar:acf-paper:0.5.0-SNAPSHOT'
    //GUIs
    implementation 'com.github.noobstersmc:RapidInv:v0.0.1'
    // Redis
    implementation 'io.lettuce:lettuce-core:6.0.7.RELEASE'
    // Gson
    implementation 'com.google.code.gson:gson:2.8.8'
}

spigot {
    authors 'aleiv'
    apiVersion '1.16'
    version '0.1'
    name 'DEDSAFIO_BINGO'
    load STARTUP
    depends = ['ProtocolLib']
}

shadowJar {
    relocate 'co.aikar.commands', 'shadded.acf'
    relocate 'co.aikar.locales', 'shadded.acf.locales'
    relocate 'acf-minecraft_', 'shadded.acf.properties.acf-minecraft_'
    relocate 'acf-core_', 'shadded.acf.properties.acf-core_'
    relocate 'us.jcedeno.libs.rapidinv', 'com.yourpackage.rapidinv'
    
}




build.dependsOn shadowJar
